--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,7 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
 }
 
 .profile-image {
@@ -45,4 +46,25 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 1%;
+  flex: 1 0 0;
+  margin: 1%;
+  gap: 5%;
+}
+
+.right-icons {
+  display: flex;
+  flex: 1;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 1%;
+}
+
+.left-icons {
+  display: flex;
+  flex: 1;
+  justify-content: flex-start;
+  align-items: center;
+  margin-left: 1%;
 }
