--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -7,9 +7,44 @@ img {
   height: 100px;
 }
 
+.overall-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 16px;
+  gap: 16px;
+}
+
 .title {
   font-size: 36px;
   font-weight: 900;
+  flex: 1;
+}
+
+.text {
+  flex: 1;
+  text-align: center;
+}
+
+.fruits {
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  gap: 50px;
+}
+
+.barberry-container,
+.chili-container,
+.pepper-container,
+.saffron-container
+{
+  max-width: 200px;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
 }
 
 /* do not edit this footer */
