--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,10 +5,52 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 img {
   width: 600px;
+}
+
+a {
+  text-decoration: none;
+  color: rgb(71, 69, 69);
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-self: stretch;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  background-color: lightgrey;
+  align-self: stretch;
+}
+
+.right-links {
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
+  gap: 16px;
+  margin: 16px;
+}
+
+.left-links {
+  flex: 1;
+  display: flex;
+  justify-content: flex-start;
+  gap: 16px;
+  margin: 16px;
+}
+
+ul {
+  list-style-type: none;
+  padding-inline-start: 0px;;
 }
 
 button {
@@ -16,6 +58,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 12px;
 }
 
 input {
@@ -24,4 +67,12 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
 }
